2022-02-01  Tim Nguyen  <ntim@apple.com>

        Entirely remove support for -apple-trailing-word
        https://bugs.webkit.org/show_bug.cgi?id=234672

        Reviewed by Simon Fraser.

        * Scripts/webkitperl/FeatureList.pm:

2022-01-31  Megan Gardner  <megan_gardner@apple.com>

        Collapsed ranges return zero rects in DocumentContext
        https://bugs.webkit.org/show_bug.cgi?id=235844

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
        (TEST):

2022-01-31  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Revert pull request when retrying
        https://bugs.webkit.org/show_bug.cgi?id=235825
        <rdar://problem/88187688>

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py:
        (UnApplyPatch.doStepIf): Only run if 'patch_id' is defined.
        (UnApplyPatch.hideStepIf): Hide step if we aren't doing it.
        (RevertPullRequestChanges): Clean checkout and checkout base hash if
        'github.base.sha' is define.
        (CompileWebKit.evaluateCommand): Add RevertPullRequestChanges step.
        (RunJavaScriptCoreTests.evaluateCommand): Ditto.
        (ReRunWebKitTests.evaluateCommand): Ditto.
        (RunWebKitTestsRedTree.evaluateCommand): Ditto.
        (RunWebKitTestsRepeatFailuresRedTree.evaluateCommand): Ditto.
        (ReRunAPITests.evaluateCommand): Ditto.
        * CISupport/ews-build/steps_unittest.py:

2022-01-31  Myles C. Maxfield  <mmaxfield@apple.com>

        [Mac] Fix TestWebKitAPI build
        https://bugs.webkit.org/show_bug.cgi?id=235906

        Reviewed by Tim Horton.

        /usr/include/cups/cups.h has this:
        # define UniversalPrint 1

        And Source/ThirdParty/gtest/include/gtest/gtest-printers.h has this:
        void UniversalPrint(const T& value, ::std::ostream* os);

        * TestWebKitAPI/config.h:

2022-01-31  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] Provide SPI to export/import local credentials